--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -98,9 +98,11 @@
 <!--  <div class="headerbtn leftbtn">-->
 <!--    消息-->
 <!--  </div>-->
+  <a href="/search">
   <div class="headerbtn leftbtn">
     搜索
   </div>
+  </a>
   <div class="headerbtn rightbtn" id="menuusername">
   </div>
   <a href="/user/login.html">
